# F1

./: .gitignore  .keep-alive  README.md  a.py  f1.ipynb  f1_driver.ipynb  f1_shared.py  f1_sync.py  pyproject.toml
.github/workflows/: f1-pipeline.yml  keep-alive.yml
data/f1_checkpoints/: driver_results_latest.json  race_locations_latest.json  race_sessions_latest.json  team_results_latest.json  team_standings_latest.json
data/f1_data/: races.json
data/f1_drivers_data/: 2025_driver_profiles.json  race_standing.json
data/f1_drivers_data/1950/: alberto_ascari.json  bill_holland.json  cecil_green.json  dorino_serafini.json  eugene_chaboud.json  felice_bonetto.json  johnnie_parsons.json  joie_chitwood.json  juan_manuel_fangio.json  louis_chiron.json  louis_rosier.json  luigi_fagioli.json  mauri_rose.json  nino_farina.json  peter_whitehead.json  philippe_etancelin.json  prince_bira.json  raymond_sommer.json  reg_parnell.json  robert_manzon.json  tony_bettenhausen.json  yves_giraud-cabantous.json
data/f1_drivers_data/1951/: alberto_ascari.json  andy_linden.json  bobby_ball.json  consalvo_sanesi.json  felice_bonetto.json  jack_mcgrath.json  lee_wallard.json  (+12 more)
data/f1_fastest_laps/: fastest_laps.json
data/f1_teams_data/: 2025_team_profiles.json  summary.json  team_standing.json
f1_checkpoints/: race_sessions_latest.json
f1_data/: summary.json
notebooks/: f1_driver.ipynb  f1_drivers.ipynb  f1_fastest_laps.ipynb  f1_race.ipynb  f1_teams.ipynb
src/crawler/: f1_drivers.py  f1_fastest_laps.py  f1_race.py  f1_race_sync.py  f1_teams.py
src/scheduler/: f1_scheduler.py
src/storage/: bigquery_loader.py  configuration.py
src/transform/: transform_data.py  transform_qualifying.py
src/utils/: country_list.py  crawling_helpers.py  f1_shared.py  helper.py  path.py  tranform_helpers.py
test/: test.py  test2.py
(+11243 files in other folders)
