[project]
name = "f1 projekt"
version = "0.1.0"
description = ""
authors = [
    {name = "Anh Viet Ngo",email = "anhviet2002.vna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
