[project]
name = "f1-projekt"
version = "0.1.0"
description = ""
authors = [
    {name = "Anh Viet Ngo",email = "anhviet2002.vna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web scraping (used in all crawler files)
    "beautifulsoup4>=4.13.0",
    "aiohttp>=3.9.0",
    
    # Data processing (used in transform files)
    "pandas>=2.1.0",
    
    # File and system operations (used throughout)
    "json5>=0.9.0",
    
    # BigQuery integration (for storage/load_to_bigquery.py)
    "google-cloud-bigquery>=3.34.0",
    "google-auth>=2.38.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
