[project]
name = "f1-projekt"
version = "0.1.0"
description = "F1 Data Pipeline Project"
authors = [
    {name = "Anh Viet Ngo", email = "anhviet2002.vna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "schedule>=1.2.2,<2.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "aiohttp>=3.12.12,<4.0.0",
    "google-cloud-bigquery>=3.34.0,<4.0.0",
    "google-auth>=2.40.3,<3.0.0",
    "lxml>=5.4.0,<6.0.0",
    "certifi>=2025.4.26,<2026.0.0",
    "pandas>=2.1.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"